# CompanionCube32

./: .gitignore  .gitmodules  README.md  testlog.txt
cc-inject/: CMakeLists.txt  compile-32-bit  main.cpp
cc-trainer/: CMakeLists.txt  build
cc-trainer/example/: example_dx9_win32.cpp
cc-trainer/src/: main.cpp
